dropshot/tests/fail/bad_server_endpoint26.stderr
error: endpoint `bad_endpoint` has invalid attributes: missing field `path`
  --> tests/fail/bad_server_endpoint26.rs:16:16
   |
16 |       #[endpoint {
   |  ________________^
17 | |         method = GET,
18 | |     }]
   | |_____^
